\name{edgeRnews}
\title{edgeR News}
\encoding{UTF-8}

\section{Version 1.1.1}{\itemize{
\item
Adding DEXSeqIntEREst() function that runs DEXSeq differential exon usage or 
intron retention test on the SummarizedExperiment objects (resulted from 
interest() or interest.sequential() analysis).

\item
Importing required functions from the DEXSeq package.

}}

\section{Version 1.1.2}{\itemize{
\item
unionRefTr() function added.

\item
u12DensityPlot corrected to support results based on unionRefTr built 
references.

\item
u12Index supports parameter intronExon now.

}}

\section{Version 1.1.3}{\itemize{

\item
Correct interestAnalyse.R and interestAnalyse.sequential.R for single 
(unpaired) reads.

\item
Correct bpparam setting in interest.R .

}}
