@@ -1,6 +1,6 @@
 Package: IntEREst
 Title: Intron-Exon Retention Estimator
-Version: 1.1.3
+Version: 1.1.4
 Date: 2016-12-15
 Author: Ali Oghabian <Ali.Oghabian@Helsinki.Fi>, Dario Greco
         <dario.greco@helsinki.fi>, Mikko Frilander
@@ -13,7 +13,7 @@ Depends: R (>= 3.4), GenomicRanges, Rsamtools, SummarizedExperiment,
         edgeR, S4Vectors
 Imports: seqLogo, Biostrings, GenomicFeatures, IRanges, seqinr, limma,
         graphics, grDevices, stats, utils, grid, methods, DBI, RMySQL,
-        GenomicAlignments, BiocParallel, BiocGenerics, DEXSeq
+        GenomicAlignments, BiocParallel, BiocGenerics, DEXSeq, DESeq2
 Suggests: clinfun, knitr, BSgenome.Hsapiens.UCSC.hg19
 VignetteBuilder: knitr
 LazyData: true
