@@ -124,7 +124,6 @@ Other arguments to pass to the \code{plot()} function.
 Class:
 	\code{\link[SummarizedExperiment]{SummarizedExperiment-class}}
 Method:
-
 	\code{\link{counts-method}}
 	\code{\link{boxplot-method}}
 }
